part_2_syntax/vsopcompiler/vsopc.output
Terminaux inutilisés dans la grammaire

    INVALID_HEX_NUMBER
    INVALID_CHAR
    INVALID_EOF_STRING
    INVALID_EOF_COMMENT
    INVALID_INTEGER_LITERAL


Grammaire

    0 $accept: Program $end

    1 Program: Class

    2 Class: %empty
    3      | Class "class" TYPE_IDENTIFIER ClassBody
    4      | Class "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER ClassBody

    5 ClassBody: "{" ClassBodyFieldMethod "}"

    6 ClassBodyFieldMethod: %empty
    7                     | ClassBodyFieldMethod Field
    8                     | ClassBodyFieldMethod Method

    9 Field: OBJECT_IDENTIFIER ":" Type ";"
   10      | OBJECT_IDENTIFIER ":" Type "<-" Expr ";"

   11 Method: OBJECT_IDENTIFIER "(" Formals ")" ":" Type Block

   12 Type: TYPE_IDENTIFIER
   13     | "int32"
   14     | "bool"
   15     | "string"
   16     | "unit"

   17 Formals: %empty
   18        | Formal
   19        | Formals "," Formal

   20 Formal: OBJECT_IDENTIFIER ":" Type

   21 Block: "{" Expr BlockExpr "}"

   22 BlockExpr: %empty
   23          | ";" Expr BlockExpr

   24 Expr: If
   25     | While
   26     | Let
   27     | OBJECT_IDENTIFIER "<-" Expr
   28     | "not" Expr
   29     | Expr "and" Expr
   30     | Expr "<=" Expr
   31     | Expr "<" Expr
   32     | Expr "=" Expr
   33     | Expr "-" Expr
   34     | Expr "+" Expr
   35     | Expr "/" Expr
   36     | Expr "*" Expr
   37     | Expr "^" Expr
   38     | "-" Expr
   39     | "isnull" Expr
   40     | OBJECT_IDENTIFIER "(" Args ")"
   41     | Expr "." OBJECT_IDENTIFIER "(" Args ")"
   42     | "new" TYPE_IDENTIFIER
   43     | OBJECT_IDENTIFIER
   44     | "self"
   45     | Literal
   46     | "(" ")"
   47     | "(" Expr ")"
   48     | Block

   49 If: "if" Expr "then" Expr
   50   | "if" Expr "then" Expr "else" Expr

   51 While: "while" Expr "do" Expr

   52 Let: "let" OBJECT_IDENTIFIER ":" Type "in" Expr
   53    | "let" OBJECT_IDENTIFIER ":" Type "<-" Expr "in" Expr

   54 Args: %empty
   55     | Expr ArgsExprList

   56 ArgsExprList: %empty
   57             | "," Expr ArgsExprList

   58 Literal: INTEGER_LITERAL
   59        | STRING_LITERAL
   60        | BooleanLiteral

   61 BooleanLiteral: "true"
   62               | "false"


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    "and" (258) 29
    "bool" (259) 14
    "class" (260) 3 4
    "do" (261) 51
    "else" (262) 50
    "extends" (263) 4
    "false" (264) 62
    "if" (265) 49 50
    "in" (266) 52 53
    "int32" (267) 13
    "isnull" (268) 39
    "let" (269) 52 53
    "new" (270) 42
    "not" (271) 28
    "self" (272) 44
    "string" (273) 15
    "then" (274) 49 50
    "true" (275) 61
    "unit" (276) 16
    "while" (277) 51
    "{" (278) 5 21
    "}" (279) 5 21
    "(" (280) 11 40 41 46 47
    ")" (281) 11 40 41 46 47
    ":" (282) 9 10 11 20 52 53
    ";" (283) 9 10 23
    "," (284) 19 57
    "+" (285) 34
    "-" (286) 33 38
    "*" (287) 36
    "/" (288) 35
    "^" (289) 37
    "." (290) 41
    "=" (291) 32
    "<" (292) 31
    "<=" (293) 30
    "<-" (294) 10 27 53
    INVALID_HEX_NUMBER (295)
    INVALID_CHAR (296)
    INVALID_EOF_STRING (297)
    INVALID_EOF_COMMENT (298)
    INVALID_INTEGER_LITERAL (299)
    INTEGER_LITERAL <intValue> (300) 58
    TYPE_IDENTIFIER <stringValue> (301) 3 4 12 42
    OBJECT_IDENTIFIER <stringValue> (302) 9 10 11 20 27 40 41 43 52 53
    STRING_LITERAL <stringValue> (303) 59
    UNARYMINUS (304)
    EMBEDDED (305)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (51)
        à gauche: 0
    Program (52)
        à gauche: 1
        à droite: 0
    Class (53)
        à gauche: 2 3 4
        à droite: 1 3 4
    ClassBody (54)
        à gauche: 5
        à droite: 3 4
    ClassBodyFieldMethod (55)
        à gauche: 6 7 8
        à droite: 5 7 8
    Field (56)
        à gauche: 9 10
        à droite: 7
    Method (57)
        à gauche: 11
        à droite: 8
    Type (58)
        à gauche: 12 13 14 15 16
        à droite: 9 10 11 20 52 53
    Formals (59)
        à gauche: 17 18 19
        à droite: 11 19
    Formal (60)
        à gauche: 20
        à droite: 18 19
    Block (61)
        à gauche: 21
        à droite: 11 48
    BlockExpr (62)
        à gauche: 22 23
        à droite: 21 23
    Expr (63)
        à gauche: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        à droite: 10 21 23 27 28 29 30 31 32 33 34 35 36 37 38 39 41 47 49 50 51 52 53 55 57
    If (64)
        à gauche: 49 50
        à droite: 24
    While (65)
        à gauche: 51
        à droite: 25
    Let (66)
        à gauche: 52 53
        à droite: 26
    Args (67)
        à gauche: 54 55
        à droite: 40 41
    ArgsExprList (68)
        à gauche: 56 57
        à droite: 55 57
    Literal (69)
        à gauche: 58 59 60
        à droite: 45
    BooleanLiteral (70)
        à gauche: 61 62
        à droite: 60


État 0

    0 $accept: • Program $end

    $défaut  réduction par utilisation de la règle 2 (Class)

    Program  aller à l'état 1
    Class    aller à l'état 2


État 1

    0 $accept: Program • $end

    $end  décalage et aller à l'état 3


État 2

    1 Program: Class •
    3 Class: Class • "class" TYPE_IDENTIFIER ClassBody
    4      | Class • "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER ClassBody

    "class"  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 1 (Program)


État 3

    0 $accept: Program $end •

    $défaut  accepter


État 4

    3 Class: Class "class" • TYPE_IDENTIFIER ClassBody
    4      | Class "class" • TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER ClassBody

    TYPE_IDENTIFIER  décalage et aller à l'état 5


État 5

    3 Class: Class "class" TYPE_IDENTIFIER • ClassBody
    4      | Class "class" TYPE_IDENTIFIER • "extends" TYPE_IDENTIFIER ClassBody

    "extends"  décalage et aller à l'état 6
    "{"        décalage et aller à l'état 7

    ClassBody  aller à l'état 8


État 6

    4 Class: Class "class" TYPE_IDENTIFIER "extends" • TYPE_IDENTIFIER ClassBody

    TYPE_IDENTIFIER  décalage et aller à l'état 9


État 7

    5 ClassBody: "{" • ClassBodyFieldMethod "}"

    $défaut  réduction par utilisation de la règle 6 (ClassBodyFieldMethod)

    ClassBodyFieldMethod  aller à l'état 10


État 8

    3 Class: Class "class" TYPE_IDENTIFIER ClassBody •

    $défaut  réduction par utilisation de la règle 3 (Class)


État 9

    4 Class: Class "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER • ClassBody

    "{"  décalage et aller à l'état 7

    ClassBody  aller à l'état 11


État 10

    5 ClassBody: "{" ClassBodyFieldMethod • "}"
    7 ClassBodyFieldMethod: ClassBodyFieldMethod • Field
    8                     | ClassBodyFieldMethod • Method

    "}"                décalage et aller à l'état 12
    OBJECT_IDENTIFIER  décalage et aller à l'état 13

    Field   aller à l'état 14
    Method  aller à l'état 15


État 11

    4 Class: Class "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER ClassBody •

    $défaut  réduction par utilisation de la règle 4 (Class)


État 12

    5 ClassBody: "{" ClassBodyFieldMethod "}" •

    $défaut  réduction par utilisation de la règle 5 (ClassBody)


État 13

    9 Field: OBJECT_IDENTIFIER • ":" Type ";"
   10      | OBJECT_IDENTIFIER • ":" Type "<-" Expr ";"
   11 Method: OBJECT_IDENTIFIER • "(" Formals ")" ":" Type Block

    "("  décalage et aller à l'état 16
    ":"  décalage et aller à l'état 17


État 14

    7 ClassBodyFieldMethod: ClassBodyFieldMethod Field •

    $défaut  réduction par utilisation de la règle 7 (ClassBodyFieldMethod)


État 15

    8 ClassBodyFieldMethod: ClassBodyFieldMethod Method •

    $défaut  réduction par utilisation de la règle 8 (ClassBodyFieldMethod)


État 16

   11 Method: OBJECT_IDENTIFIER "(" • Formals ")" ":" Type Block

    OBJECT_IDENTIFIER  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 17 (Formals)

    Formals  aller à l'état 19
    Formal   aller à l'état 20


État 17

    9 Field: OBJECT_IDENTIFIER ":" • Type ";"
   10      | OBJECT_IDENTIFIER ":" • Type "<-" Expr ";"

    "bool"           décalage et aller à l'état 21
    "int32"          décalage et aller à l'état 22
    "string"         décalage et aller à l'état 23
    "unit"           décalage et aller à l'état 24
    TYPE_IDENTIFIER  décalage et aller à l'état 25

    Type  aller à l'état 26


État 18

   20 Formal: OBJECT_IDENTIFIER • ":" Type

    ":"  décalage et aller à l'état 27


État 19

   11 Method: OBJECT_IDENTIFIER "(" Formals • ")" ":" Type Block
   19 Formals: Formals • "," Formal

    ")"  décalage et aller à l'état 28
    ","  décalage et aller à l'état 29


État 20

   18 Formals: Formal •

    $défaut  réduction par utilisation de la règle 18 (Formals)


État 21

   14 Type: "bool" •

    $défaut  réduction par utilisation de la règle 14 (Type)


État 22

   13 Type: "int32" •

    $défaut  réduction par utilisation de la règle 13 (Type)


État 23

   15 Type: "string" •

    $défaut  réduction par utilisation de la règle 15 (Type)


État 24

   16 Type: "unit" •

    $défaut  réduction par utilisation de la règle 16 (Type)


État 25

   12 Type: TYPE_IDENTIFIER •

    $défaut  réduction par utilisation de la règle 12 (Type)


État 26

    9 Field: OBJECT_IDENTIFIER ":" Type • ";"
   10      | OBJECT_IDENTIFIER ":" Type • "<-" Expr ";"

    ";"   décalage et aller à l'état 30
    "<-"  décalage et aller à l'état 31


État 27

   20 Formal: OBJECT_IDENTIFIER ":" • Type

    "bool"           décalage et aller à l'état 21
    "int32"          décalage et aller à l'état 22
    "string"         décalage et aller à l'état 23
    "unit"           décalage et aller à l'état 24
    TYPE_IDENTIFIER  décalage et aller à l'état 25

    Type  aller à l'état 32


État 28

   11 Method: OBJECT_IDENTIFIER "(" Formals ")" • ":" Type Block

    ":"  décalage et aller à l'état 33


État 29

   19 Formals: Formals "," • Formal

    OBJECT_IDENTIFIER  décalage et aller à l'état 18

    Formal  aller à l'état 34


État 30

    9 Field: OBJECT_IDENTIFIER ":" Type ";" •

    $défaut  réduction par utilisation de la règle 9 (Field)


État 31

   10 Field: OBJECT_IDENTIFIER ":" Type "<-" • Expr ";"

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 51
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 32

   20 Formal: OBJECT_IDENTIFIER ":" Type •

    $défaut  réduction par utilisation de la règle 20 (Formal)


État 33

   11 Method: OBJECT_IDENTIFIER "(" Formals ")" ":" • Type Block

    "bool"           décalage et aller à l'état 21
    "int32"          décalage et aller à l'état 22
    "string"         décalage et aller à l'état 23
    "unit"           décalage et aller à l'état 24
    TYPE_IDENTIFIER  décalage et aller à l'état 25

    Type  aller à l'état 57


État 34

   19 Formals: Formals "," Formal •

    $défaut  réduction par utilisation de la règle 19 (Formals)


État 35

   62 BooleanLiteral: "false" •

    $défaut  réduction par utilisation de la règle 62 (BooleanLiteral)


État 36

   49 If: "if" • Expr "then" Expr
   50   | "if" • Expr "then" Expr "else" Expr

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 58
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 37

   39 Expr: "isnull" • Expr

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 59
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 38

   52 Let: "let" • OBJECT_IDENTIFIER ":" Type "in" Expr
   53    | "let" • OBJECT_IDENTIFIER ":" Type "<-" Expr "in" Expr

    OBJECT_IDENTIFIER  décalage et aller à l'état 60


État 39

   42 Expr: "new" • TYPE_IDENTIFIER

    TYPE_IDENTIFIER  décalage et aller à l'état 61


État 40

   28 Expr: "not" • Expr

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 62
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 41

   44 Expr: "self" •

    $défaut  réduction par utilisation de la règle 44 (Expr)


État 42

   61 BooleanLiteral: "true" •

    $défaut  réduction par utilisation de la règle 61 (BooleanLiteral)


État 43

   51 While: "while" • Expr "do" Expr

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 63
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 44

   21 Block: "{" • Expr BlockExpr "}"

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 64
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 45

   46 Expr: "(" • ")"
   47     | "(" • Expr ")"

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    ")"                décalage et aller à l'état 65
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 66
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 46

   38 Expr: "-" • Expr

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 67
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 47

   58 Literal: INTEGER_LITERAL •

    $défaut  réduction par utilisation de la règle 58 (Literal)


État 48

   27 Expr: OBJECT_IDENTIFIER • "<-" Expr
   40     | OBJECT_IDENTIFIER • "(" Args ")"
   43     | OBJECT_IDENTIFIER •

    "("   décalage et aller à l'état 68
    "<-"  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 43 (Expr)


État 49

   59 Literal: STRING_LITERAL •

    $défaut  réduction par utilisation de la règle 59 (Literal)


État 50

   48 Expr: Block •

    $défaut  réduction par utilisation de la règle 48 (Expr)


État 51

   10 Field: OBJECT_IDENTIFIER ":" Type "<-" Expr • ";"
   29 Expr: Expr • "and" Expr
   30     | Expr • "<=" Expr
   31     | Expr • "<" Expr
   32     | Expr • "=" Expr
   33     | Expr • "-" Expr
   34     | Expr • "+" Expr
   35     | Expr • "/" Expr
   36     | Expr • "*" Expr
   37     | Expr • "^" Expr
   41     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "and"  décalage et aller à l'état 70
    ";"    décalage et aller à l'état 71
    "+"    décalage et aller à l'état 72
    "-"    décalage et aller à l'état 73
    "*"    décalage et aller à l'état 74
    "/"    décalage et aller à l'état 75
    "^"    décalage et aller à l'état 76
    "."    décalage et aller à l'état 77
    "="    décalage et aller à l'état 78
    "<"    décalage et aller à l'état 79
    "<="   décalage et aller à l'état 80


État 52

   24 Expr: If •

    $défaut  réduction par utilisation de la règle 24 (Expr)


État 53

   25 Expr: While •

    $défaut  réduction par utilisation de la règle 25 (Expr)


État 54

   26 Expr: Let •

    $défaut  réduction par utilisation de la règle 26 (Expr)


État 55

   45 Expr: Literal •

    $défaut  réduction par utilisation de la règle 45 (Expr)


État 56

   60 Literal: BooleanLiteral •

    $défaut  réduction par utilisation de la règle 60 (Literal)


État 57

   11 Method: OBJECT_IDENTIFIER "(" Formals ")" ":" Type • Block

    "{"  décalage et aller à l'état 44

    Block  aller à l'état 81


État 58

   29 Expr: Expr • "and" Expr
   30     | Expr • "<=" Expr
   31     | Expr • "<" Expr
   32     | Expr • "=" Expr
   33     | Expr • "-" Expr
   34     | Expr • "+" Expr
   35     | Expr • "/" Expr
   36     | Expr • "*" Expr
   37     | Expr • "^" Expr
   41     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"
   49 If: "if" Expr • "then" Expr
   50   | "if" Expr • "then" Expr "else" Expr

    "and"   décalage et aller à l'état 70
    "then"  décalage et aller à l'état 82
    "+"     décalage et aller à l'état 72
    "-"     décalage et aller à l'état 73
    "*"     décalage et aller à l'état 74
    "/"     décalage et aller à l'état 75
    "^"     décalage et aller à l'état 76
    "."     décalage et aller à l'état 77
    "="     décalage et aller à l'état 78
    "<"     décalage et aller à l'état 79
    "<="    décalage et aller à l'état 80


État 59

   29 Expr: Expr • "and" Expr
   30     | Expr • "<=" Expr
   31     | Expr • "<" Expr
   32     | Expr • "=" Expr
   33     | Expr • "-" Expr
   34     | Expr • "+" Expr
   35     | Expr • "/" Expr
   36     | Expr • "*" Expr
   37     | Expr • "^" Expr
   39     | "isnull" Expr •
   41     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "^"  décalage et aller à l'état 76
    "."  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 39 (Expr)


État 60

   52 Let: "let" OBJECT_IDENTIFIER • ":" Type "in" Expr
   53    | "let" OBJECT_IDENTIFIER • ":" Type "<-" Expr "in" Expr

    ":"  décalage et aller à l'état 83


État 61

   42 Expr: "new" TYPE_IDENTIFIER •

    $défaut  réduction par utilisation de la règle 42 (Expr)


État 62

   28 Expr: "not" Expr •
   29     | Expr • "and" Expr
   30     | Expr • "<=" Expr
   31     | Expr • "<" Expr
   32     | Expr • "=" Expr
   33     | Expr • "-" Expr
   34     | Expr • "+" Expr
   35     | Expr • "/" Expr
   36     | Expr • "*" Expr
   37     | Expr • "^" Expr
   41     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "+"   décalage et aller à l'état 72
    "-"   décalage et aller à l'état 73
    "*"   décalage et aller à l'état 74
    "/"   décalage et aller à l'état 75
    "^"   décalage et aller à l'état 76
    "."   décalage et aller à l'état 77
    "="   décalage et aller à l'état 78
    "<"   décalage et aller à l'état 79
    "<="  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 28 (Expr)


État 63

   29 Expr: Expr • "and" Expr
   30     | Expr • "<=" Expr
   31     | Expr • "<" Expr
   32     | Expr • "=" Expr
   33     | Expr • "-" Expr
   34     | Expr • "+" Expr
   35     | Expr • "/" Expr
   36     | Expr • "*" Expr
   37     | Expr • "^" Expr
   41     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"
   51 While: "while" Expr • "do" Expr

    "and"  décalage et aller à l'état 70
    "do"   décalage et aller à l'état 84
    "+"    décalage et aller à l'état 72
    "-"    décalage et aller à l'état 73
    "*"    décalage et aller à l'état 74
    "/"    décalage et aller à l'état 75
    "^"    décalage et aller à l'état 76
    "."    décalage et aller à l'état 77
    "="    décalage et aller à l'état 78
    "<"    décalage et aller à l'état 79
    "<="   décalage et aller à l'état 80


État 64

   21 Block: "{" Expr • BlockExpr "}"
   29 Expr: Expr • "and" Expr
   30     | Expr • "<=" Expr
   31     | Expr • "<" Expr
   32     | Expr • "=" Expr
   33     | Expr • "-" Expr
   34     | Expr • "+" Expr
   35     | Expr • "/" Expr
   36     | Expr • "*" Expr
   37     | Expr • "^" Expr
   41     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "and"  décalage et aller à l'état 70
    ";"    décalage et aller à l'état 85
    "+"    décalage et aller à l'état 72
    "-"    décalage et aller à l'état 73
    "*"    décalage et aller à l'état 74
    "/"    décalage et aller à l'état 75
    "^"    décalage et aller à l'état 76
    "."    décalage et aller à l'état 77
    "="    décalage et aller à l'état 78
    "<"    décalage et aller à l'état 79
    "<="   décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 22 (BlockExpr)

    BlockExpr  aller à l'état 86


État 65

   46 Expr: "(" ")" •

    $défaut  réduction par utilisation de la règle 46 (Expr)


État 66

   29 Expr: Expr • "and" Expr
   30     | Expr • "<=" Expr
   31     | Expr • "<" Expr
   32     | Expr • "=" Expr
   33     | Expr • "-" Expr
   34     | Expr • "+" Expr
   35     | Expr • "/" Expr
   36     | Expr • "*" Expr
   37     | Expr • "^" Expr
   41     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"
   47     | "(" Expr • ")"

    "and"  décalage et aller à l'état 70
    ")"    décalage et aller à l'état 87
    "+"    décalage et aller à l'état 72
    "-"    décalage et aller à l'état 73
    "*"    décalage et aller à l'état 74
    "/"    décalage et aller à l'état 75
    "^"    décalage et aller à l'état 76
    "."    décalage et aller à l'état 77
    "="    décalage et aller à l'état 78
    "<"    décalage et aller à l'état 79
    "<="   décalage et aller à l'état 80


État 67

   29 Expr: Expr • "and" Expr
   30     | Expr • "<=" Expr
   31     | Expr • "<" Expr
   32     | Expr • "=" Expr
   33     | Expr • "-" Expr
   34     | Expr • "+" Expr
   35     | Expr • "/" Expr
   36     | Expr • "*" Expr
   37     | Expr • "^" Expr
   38     | "-" Expr •
   41     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "^"  décalage et aller à l'état 76
    "."  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 38 (Expr)


État 68

   40 Expr: OBJECT_IDENTIFIER "(" • Args ")"

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 54 (Args)

    Block           aller à l'état 50
    Expr            aller à l'état 88
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Args            aller à l'état 89
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 69

   27 Expr: OBJECT_IDENTIFIER "<-" • Expr

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 90
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 70

   29 Expr: Expr "and" • Expr

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 91
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 71

   10 Field: OBJECT_IDENTIFIER ":" Type "<-" Expr ";" •

    $défaut  réduction par utilisation de la règle 10 (Field)


État 72

   34 Expr: Expr "+" • Expr

    "false"            décalage et aller à l'état 35
    "if"               décalage et aller à l'état 36
    "isnull"           décalage et aller à l'état 37
    "let"              décalage et aller à l'état 38
    "new"              décalage et aller à l'état 39
    "not"              décalage et aller à l'état 40
    "self"             décalage et aller à l'état 41
    "true"             décalage et aller à l'état 42
    "while"            décalage et aller à l'état 43
    "{"                décalage et aller à l'état 44
    "("                décalage et aller à l'état 45
    "-"                décalage et aller à l'état 46
    INTEGER_LITERAL    décalage et aller à l'état 47
    OBJECT_IDENTIFIER  décalage et aller à l'état 48
    STRING_LITERAL     décalage et aller à l'état 49

    Block           aller à l'état 50
    Expr            aller à l'état 92
    If              aller à l'état 52
    While           aller à l'état 53
    Let             aller à l'état 54
    Literal         aller à l'état 55
    BooleanLiteral  aller à l'état 56


État 73

   33 Expr: Expr "-" • Expr
